--- a/.rancher-pipeline.yml
+++ b/.rancher-pipeline.yml
@@ -6,5 +6,5 @@ stages:
       buildContext: .
       tag: dao-py-build-demo
       pushRemote: true
-      registry: 127.0.0.1:34142
+      registry: quay.io
 timeout: 60
